2015-07-26  Markus Gans  <guru.mail@muenster.de>
	* init() method for the FStatusKey constructor
	  to avoid code duplication

2015-07-18  Markus Gans  <guru.mail@muenster.de>
	* Add multiple lines support for FLabel

2015-07-12  Markus Gans  <guru.mail@muenster.de>
	* Improve focusFirstChild() and focusLastChild()

2015-07-09  Markus Gans  <guru.mail@muenster.de>
	* Better contrast on 8 color terminals

2015-07-06  Markus Gans  <guru.mail@muenster.de>
	* Bug fix disable cursor on focus FSwitch
	* Hold down the mouse button displays FSwitch in a different color.

2015-07-04  Markus Gans  <guru.mail@muenster.de>
	* New class FSwitch
	* Add the watch example to demonstrate FSwitch
	* Version 0.1.1

2015-07-02  Markus Gans  <guru.mail@muenster.de>
	* Add a joined right-left-line character to the newfont
	* Use the object timer for the progress bar animation 
	  in the ui example program

2015-07-01  Markus Gans  <guru.mail@muenster.de>
	* Use the object timer for the click animation in FButton

2015-06-28  Markus Gans  <guru.mail@muenster.de>
	* Add exception handling for toLong() and toULong()  
	  in FString

2015-06-27  Markus Gans  <guru.mail@muenster.de>
	* Add toFloat(), toDouble() and setNumber(...) for 
	  floating point values to FString

2015-06-22  Markus Gans  <guru.mail@muenster.de>
	* Add a simple calculator with trigonometric functions

2015-06-21  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to draw double lines on overlapped 
	  flat lines for the 8x16graph font
	* Bug fix in FButton (mouse click with unsetClickAnimation())

2015-06-20  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to change the colors from FButton

2015-06-15  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to turn off click animation 
	  on FButton

2015-06-14  Markus Gans  <guru.mail@muenster.de>
	* correction for the modifier letter small x 
	  in the character map

2015-06-12  Markus Gans  <guru.mail@muenster.de>